--- a/RecipePhoto/Base.lproj/Main_iphone.storyboard
+++ b/RecipePhoto/Base.lproj/Main_iphone.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="4514" systemVersion="13A2093" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" initialViewController="gA9-hS-Vaj">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="4514" systemVersion="13A598" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" initialViewController="gA9-hS-Vaj">
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="3747"/>
     </dependencies>
@@ -16,7 +16,7 @@
                         <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                         <subviews>
-                            <collectionView opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" fixedFrame="YES" minimumZoomScale="0.0" maximumZoomScale="0.0" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="SRi-FM-lgE">
+                            <collectionView opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" minimumZoomScale="0.0" maximumZoomScale="0.0" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="SRi-FM-lgE">
                                 <rect key="frame" x="0.0" y="20" width="320" height="548"/>
                                 <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                                 <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="10" minimumInteritemSpacing="10" id="6wv-Wb-sz4">
@@ -59,6 +59,12 @@
                             </collectionView>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="SRi-FM-lgE" firstAttribute="top" secondItem="GvE-gG-9CY" secondAttribute="top" constant="20" symbolic="YES" id="2WU-h6-KEU"/>
+                            <constraint firstItem="SRi-FM-lgE" firstAttribute="leading" secondItem="GvE-gG-9CY" secondAttribute="leading" id="kXB-Gh-1ih"/>
+                            <constraint firstAttribute="bottom" secondItem="SRi-FM-lgE" secondAttribute="bottom" id="wjs-Kp-rI2"/>
+                            <constraint firstAttribute="trailing" secondItem="SRi-FM-lgE" secondAttribute="trailing" id="xeT-Bm-Qey"/>
+                        </constraints>
                     </view>
                     <navigationItem key="navigationItem" title="City Coasters" id="er1-rJ-Cej"/>
                     <connections>
@@ -81,21 +87,30 @@
                         <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                         <subviews>
-                            <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Hello" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="NO6-nG-TS5">
-                                <rect key="frame" x="20" y="72" width="280" height="21"/>
+                            <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Hello" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="NO6-nG-TS5">
+                                <rect key="frame" x="20" y="72" width="280" height="40"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="40" id="dCW-K2-ZJE"/>
+                                </constraints>
                                 <fontDescription key="fontDescription" type="system" pointSize="29"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="8mw-I1-Lbu">
-                                <rect key="frame" x="20" y="113" width="280" height="280"/>
+                                <rect key="frame" x="20" y="120" width="280" height="280"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                             </imageView>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="NO6-nG-TS5" firstAttribute="top" secondItem="ZZg-qu-vwP" secondAttribute="bottom" constant="8" id="De2-Ky-gH1"/>
+                            <constraint firstAttribute="trailing" secondItem="NO6-nG-TS5" secondAttribute="trailing" constant="20" symbolic="YES" id="N4E-So-7oy"/>
+                            <constraint firstItem="NO6-nG-TS5" firstAttribute="leading" secondItem="QTY-pf-FQa" secondAttribute="leading" constant="20" symbolic="YES" id="n0N-Ps-hOK"/>
+                        </constraints>
                     </view>
                     <navigationItem key="navigationItem" id="CO8-AF-loy"/>
                     <connections>
+                        <outlet property="imageView" destination="8mw-I1-Lbu" id="IXY-4E-5ZZ"/>
                         <outlet property="photo" destination="8mw-I1-Lbu" id="LaH-vh-Q66"/>
                         <outlet property="photoName" destination="NO6-nG-TS5" id="0Kd-1Z-uGX"/>
                     </connections>
