--- a/RecipePhoto/Base.lproj/Main_ipad.storyboard
+++ b/RecipePhoto/Base.lproj/Main_ipad.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="4514" systemVersion="13A2093" targetRuntime="iOS.CocoaTouch.iPad" propertyAccessControl="none" useAutolayout="YES" initialViewController="gA9-hS-Vaj">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="4514" systemVersion="13A598" targetRuntime="iOS.CocoaTouch.iPad" propertyAccessControl="none" useAutolayout="YES" initialViewController="gA9-hS-Vaj">
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="3747"/>
     </dependencies>
@@ -96,6 +96,7 @@
                     </view>
                     <navigationItem key="navigationItem" id="CO8-AF-loy"/>
                     <connections>
+                        <outlet property="ipadImageView" destination="8mw-I1-Lbu" id="bDh-mS-1z8"/>
                         <outlet property="photo" destination="8mw-I1-Lbu" id="LaH-vh-Q66"/>
                         <outlet property="photoName" destination="NO6-nG-TS5" id="0Kd-1Z-uGX"/>
                     </connections>
